<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_alignParentRight="true"
	android:id="@+id/scrollView1" android:layout_height="fill_parent">
	<RelativeLayout android:layout_width="wrap_content"
		android:id="@+id/relativeLayout" android:layout_alignParentRight="true"
		android:layout_height="wrap_content">
		<TextView android:layout_alignParentLeft="true"
			android:layout_height="wrap_content" android:id="@+id/textView1"
			android:layout_width="250dip" android:text="@string/userName"></TextView>
		<EditText android:id="@+id/editText1" android:layout_height="40dip"
			android:inputType="textPersonName" android:layout_width="wrap_content"
			android:layout_below="@+id/textView1" android:layout_alignLeft="@+id/textView1"
			android:layout_alignRight="@+id/textView1">
			<requestFocus></requestFocus>
		</EditText>
		<TextView android:layout_height="wrap_content"
			android:layout_width="wrap_content" android:layout_below="@+id/editText1"
			android:id="@+id/textView2" android:layout_alignLeft="@+id/editText1"
			android:layout_alignRight="@+id/editText1" android:text="@string/password"></TextView>
		<EditText android:id="@+id/editText2" android:layout_height="40dip"
			android:inputType="textPassword" android:layout_width="wrap_content"
			android:layout_below="@+id/textView2" android:layout_alignLeft="@+id/textView2"
			android:layout_alignRight="@+id/textView2"></EditText>
		<TextView android:layout_height="wrap_content"
			android:layout_width="wrap_content" android:layout_below="@+id/editText2"
			android:id="@+id/textView3" android:layout_alignLeft="@+id/editText2"
			android:layout_alignRight="@+id/editText2" android:text="@string/firstName"></TextView>
		<EditText android:id="@+id/editText3" android:layout_height="40dip"
			android:inputType="textPersonName" android:layout_width="wrap_content"
			android:layout_below="@+id/textView3" android:layout_alignLeft="@+id/textView3"
			android:layout_alignRight="@+id/textView3"></EditText>
		<TextView android:layout_height="wrap_content"
			android:layout_width="wrap_content" android:layout_below="@+id/editText3"
			android:id="@+id/textView4" android:layout_alignLeft="@+id/editText3"
			android:layout_alignRight="@+id/editText3" android:text="@string/lastName"></TextView>
		<EditText android:id="@+id/editText4" android:layout_height="40dip"
			android:inputType="textPersonName" android:layout_width="wrap_content"
			android:layout_below="@+id/textView4" android:layout_alignLeft="@+id/textView4"
			android:layout_alignRight="@+id/textView4"></EditText>
		<TextView android:layout_height="wrap_content"
			android:layout_width="wrap_content" android:layout_below="@+id/editText4"
			android:id="@+id/textView5" android:layout_alignLeft="@+id/editText4"
			android:layout_alignRight="@+id/editText4" android:text="@string/phoneNo"></TextView>
		<EditText android:id="@+id/editText5" android:layout_height="40dip"
			android:inputType="phone" android:layout_width="wrap_content"
			android:layout_below="@+id/textView5" android:layout_alignLeft="@+id/textView5"
			android:layout_alignRight="@+id/textView5"></EditText>
		<TextView android:layout_height="wrap_content"
			android:layout_width="wrap_content" android:layout_below="@+id/editText5"
			android:id="@+id/textView6" android:layout_alignLeft="@+id/editText5"
			android:layout_alignRight="@+id/editText5" android:text="@string/mobileNo"></TextView>
		<EditText android:id="@+id/editText6" android:layout_height="40dip"
			android:inputType="phone" android:layout_width="wrap_content"
			android:layout_below="@+id/textView6" android:layout_alignLeft="@+id/textView6"
			android:layout_alignRight="@+id/textView6"></EditText>
		<TextView android:layout_height="wrap_content"
			android:layout_width="wrap_content" android:layout_below="@+id/editText6"
			android:id="@+id/textView7" android:layout_alignLeft="@+id/editText6"
			android:layout_alignRight="@+id/editText6" android:text="@string/emailAddress"></TextView>
		<EditText android:id="@+id/editText7" android:layout_height="40dip"
			android:inputType="textEmailAddress" android:layout_width="wrap_content"
			android:layout_below="@+id/textView7" android:layout_alignLeft="@+id/textView7"
			android:layout_alignRight="@+id/textView7"></EditText>
		<TextView android:layout_height="wrap_content"
			android:layout_width="wrap_content" android:layout_below="@+id/editText7"
			android:id="@+id/textView8" android:layout_alignLeft="@+id/editText7"
			android:layout_alignRight="@+id/editText7" android:text="@string/creditCardNo"></TextView>
		<EditText android:id="@+id/editText8" android:layout_height="40dip"
			android:layout_width="wrap_content" android:layout_below="@+id/textView8"
			android:layout_alignLeft="@+id/textView8" android:layout_alignRight="@+id/textView8"></EditText>
		<Button android:layout_marginLeft="10dip" android:id="@+id/cancel"
			android:layout_height="wrap_content" android:layout_width="wrap_content"
			android:text="Cancel" android:layout_below="@+id/editText8"
			android:layout_alignRight="@+id/editText8" android:onClick="cancelClick"
			android:clickable="true"></Button>
		<Button android:layout_height="wrap_content"
			android:layout_width="wrap_content" android:text="Sign Up!!"
			android:layout_toLeftOf="@+id/cancel" android:layout_alignTop="@+id/cancel"
			android:layout_alignBottom="@+id/cancel" android:clickable="true" android:onClick="submitData"></Button>
	</RelativeLayout>
</ScrollView>
