<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_alignParentRight="true"
	android:id="@+id/scrollView1" android:layout_height="fill_parent">
	<LinearLayout android:id="@+id/linearLayout1"
		android:layout_width="match_parent" android:layout_height="match_parent"
		android:orientation="vertical">
		<TextView android:id="@+id/helloUser" android:textAppearance="?android:attr/textAppearanceLarge"
			android:text="TextView" android:layout_height="wrap_content"
			android:layout_alignParentLeft="true" android:layout_marginLeft="90dip"
			android:layout_width="wrap_content"></TextView>
		<TextView android:layout_width="wrap_content" android:id="@+id/fullName"
			android:text="TextView" android:layout_height="wrap_content"
			android:layout_marginTop="10dip"></TextView>
		<TextView android:layout_width="wrap_content" android:id="@+id/phoneNo"
			android:text="TextView" android:layout_height="wrap_content"
			android:layout_marginTop="10dip"></TextView>
		<TextView android:layout_width="wrap_content" android:id="@+id/mobileNo"
			android:text="TextView" android:layout_height="wrap_content"
			android:layout_marginTop="10dip"></TextView>
		<TextView android:layout_width="wrap_content" android:id="@+id/email"
			android:text="TextView" android:layout_height="wrap_content"
			android:layout_marginTop="10dip"></TextView>
		<TextView android:layout_width="wrap_content" android:id="@+id/creditCard"
			android:text="TextView" android:layout_height="wrap_content"
			android:layout_marginTop="10dip"></TextView>
		<TextView android:layout_width="wrap_content" android:id="@+id/editData"
			android:layout_marginTop="20dip" android:layout_height="wrap_content"
			android:clickable="true" android:onClick="editData" android:text="@string/editData"
			android:focusable="true"></TextView>
		<TextView android:layout_width="wrap_content" android:id="@+id/showApp"
			android:layout_marginTop="20dip" android:layout_height="wrap_content"
			android:clickable="true" android:onClick="showAppartments"
			android:text="@string/showApp"></TextView>
		<TextView android:layout_width="wrap_content" android:id="@+id/addApp"
			android:layout_marginTop="20dip" android:layout_height="wrap_content"
			android:clickable="true" android:onClick="addAppartment"
			android:text="@string/addApp"></TextView>
		<Button android:id="@+id/button1" android:layout_marginTop="40dip"
			android:layout_height="wrap_content" android:text="Sign Out"
			android:layout_width="match_parent" android:clickable="true"
			android:onClick="signOutClick"></Button>
	</LinearLayout>
</ScrollView>

